kfw: Leash help WIP update from sofia
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/htmlhelp/html/Change_Password.htm
+++ b/src/windows/leash/htmlhelp/html/Change_Password.htm
@@ -7,25 +7,49 @@
 </HEAD>
 <BODY>
 <H1>Change Password </H1>
+
 <p>
-Before you start the process, create a strong password. It's best to start with a phrase instead of a word. <a href="HTML/Password_Tips.htm">Password Tips</a></p>
-<p>
+
 To change your password:</p>
 <ol>
-<li>Click the Change Password button in the Home tab.
-<li> Verfiy your username and enter your current password.
-<li> Enter your new password twice. You must enter it the second time to make sure you have typed it correctly, since you cannot visually confirm what you have typed.
-<li>Click Okay.
+<li> Create or choose a strong new password. It's best to start with a phrase instead of a word. <br>
+ <a href="HTML/Password_Tips.htm">Password tips and examples</a></li>
+
+<li>If you have multiple <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principals</a>, you can select the principal you want to manage by clicking it in the main window. Or you can wait to choose your principal in the Change Password window. </li>
+
+<li>Click the Change Password button in the ribbon menu at the of the main window.</li>
+
+<li> Verify your principal (your Kerberos identity) or select a different one with the pull down arrow.  </li>
+
+<li>Enter your current password.</li>
+
+<li> Enter your new password twice. You must enter it the second time to make sure you have typed it correctly, since you cannot visually confirm what you have typed.</li>
+
+<li>Click Okay.</li>
+
 </ol>
 <p>
 Remember to use your new password the next time you obtain tickets.</p>
 <p>
-<b>Related Help</b></p>
+<b>Imported Ticket Note: </b> If  you change the password for a principal with imported tickets,  you must use your new password when you use that principal to log on to your Windows domain with a Windows Logon session. <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
+</p>
+
+<H2>Related Help</H2>
 <ul id="helpul">
-<li><a href="HTML/Passwords.htm">About Passwords</a></li>
-<li><a href="HTML/Password_Tips.htm">Password Tips</a></li>
+<li><a href="HTML/Passwords.htm">About passwords</a></li>
+<li><a href="HTML/Password_Tips.htm">Password tips and examples</a></li>
 <li><a href="HTML/Forget_Password.htm">If you forget your password</a></li>
+<li><a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a></li>
 
 </ul>
+
+<SCRIPT Language=JavaScript> 
+popfont="Arial,.625," 
+popupPrincipal="Your principal is your Kerberos identity. It is your user name combined with the Kerberos realm you are using. For example: 'jdoe@SALES.WIDGET.COM' " 
+</SCRIPT> 
+
+<OBJECT id=popup type="application/x-oleobject" 
+classid="clsid:adb880a6-d8ff-11cf-9377-00aa003b7a11"> 
+</OBJECT> 
 </BODY>
 </HTML>
