--- a/src/windows/leash/htmlhelp/html/Forget_Password.htm
+++ b/src/windows/leash/htmlhelp/html/Forget_Password.htm
@@ -8,15 +8,15 @@
 <BODY>
 <H1>Forgotten Password</H1>
 <p>
-If you forget your password, contact your adminstrator for help. </p>
+If you forget your password, contact your administrator or help desk. </p>
 <p>
- Usually you will be given  a new, temporary password. If so, open Leash and use the temporary password to change your password to a new one that only you know.</p>
-<p>
-<b>Related help</b></p>
+ Usually you will be given  a new, temporary password. If so, open Kerberos for Windows and use the temporary password to change your password to a new one that only you know.</p>
+
+<H3>Related help</H3>
 
 <ul id="helpul">
-<li><a href="HTML/Change_Password.htm">Change Password</a></li>
-<li><a href="HTML/Password_Tips.htm">Password Tips</a></li>
+<li><a href="HTML/Change_Password.htm">Change password</a></li>
+<li><a href="HTML/Password_Tips.htm">Password tips and examples</a></li>
 </ul>
 
 </BODY>
