--- a/src/windows/leash/htmlhelp/html/Password_Tips.htm
+++ b/src/windows/leash/htmlhelp/html/Password_Tips.htm
@@ -7,19 +7,29 @@
 
 </HEAD>
 <BODY>
-<H1>Password Tips</H1>
+<H1>Password Tips and Examples</H1>
 <p>
-A strong password is a mix of lower case letters, uppercase letters, numbers, and symbols, and is at least 8 characters long. </p>
+As computing power has gotten faster and cheaper, password cracking generators have gotten better as well. A password cracking program can rapidly try all English words, all combinations of seven or fewer characters, and common passwords such as <tt>12345678</tt> and <tt>password123</tt>. In addition, anyone with access to your personal information can try names and dates from that information.   </p>
+
+<H3>Good Password Requirements</H3>
 <p>
-A strong password is <b>not</b> based on a word found in the dictionary or any easily discovered information about yourself. </p>
-<p>
-To create a strong password that is still easy to remember, try starting with a phrase or sentence. For example, <font id="typed"> Beans and rice are my favorite foods</font> or  <tt>Mary had a little lamb</tt>. Then play around with symbols, shorthands, and misspellings to make it more secure. For example:</p>
+A strong password:  </p>
 <ul>
-<li> <tt>Beans&ricearemyFavoriteFoods!</tt></li>
-<li><tt>Rbeans&ricemyfavoritefoods?</tt> ("Are rice and beans my favorite foods?")</li>
-<li><tt>Beans 'n' rice R my fav f00ds!</tt></li>
-<li><tt>B&RaremyFaveF00ds</tt></li>
+<li>Is at least 8 characters long (preferably longer)</li>
+<li>Doesn't include your name or other easily obtained personal information</li>
+<li>Uses a mix of lower case letters, uppercase letters, numbers, and symbols </li>
+<li>Is only used for one program (and is not, for example, the same as your email password)</li>
 </ul>
+<H3>Password Advice and Examples</H3>
+<p>
+To create a strong password that is still easy to remember, try starting with a phrase or sentence. Then play around with symbols, shorthands, and misspellings to make it more secure. For example:</p>
+<ul>
+<li> "Beans and rice are my favorite foods" can become <tt>Beans&ricearemyFavoriteFoods!</tt>, <tt>Rbeans&ricemyfavoritefoods?</tt> or <tt>BeansNRiceRFavz!</tt></li>
+<li>"I can't wait 2 go to Spain" can become <tt>Ican'twait2go2Spain!</tt></li>
+<li>"Meet me at the store" can become <tt>mEEtme@zeStore</tt></li>
+<li>"Cat or dog?" can become <tt>?KatsRd0gs</tt></li>
+</ul>
+<H3>What Makes a Bad Password</H3>
 <p>
 Do <b>not</b> base your password on any of the following. They are far too easy to guess (even if you spell them backwards).</p>
 <ul>
@@ -29,9 +39,10 @@ Do <b>not</b> base your password on any of the following. They are far too easy 
 <li> One or two words found in a dictionary.</li>
 <li> The phrases "Let me in," "open up," or something similar.</li>
 <li> Simple patterns like "lolololololo" or "12345678." </li>
+<li> Any password used as an example in a manual or in help (including the examples given here).</li>
+<li> A password that you use elsewhere, especially an insecure program or website.</li>
 </ul>
-<p>
-<b>Related Help</b></p>
+<H3>Related Help</H3>
 <ul id="helpul">
 <li><a href="HTML/Change_Password.htm">Change Password</a></li>
 <li><a href="HTML/Forget_Password.htm">If you forget your password</a></li>
