--- a/src/windows/leash/htmlhelp/html/Renew_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Renew_Tickets.htm
@@ -8,40 +8,92 @@
 <BODY>
 <a name="top"><H1>Renew Tickets</H1></a>
 <p>
-Renewing your tickets allows you to run batch jobs without interruption and to work through a long session without continually reentering your password. Each time you renew your ticket, Kerberos resets the ticket lifetime to the length of the orginal ticket. </p>
-<p>
-You can renew a ticket if the following conditions are met:
-<ul>
-<li> When you obtained the ticket, the Renewable flag was selected. <a href="HTML/Ticket_Settings.htm">Ticket Settings and Flags help</a></li>
-<li> The "Renewable Until" deadline has not been reached. </li>
-<li> The ticket has not already expired. </li>
+Renew a ticket to extend its useable lifetime. Each time a ticket is renewed, its lifespan is reset to the original length of the ticket. It can then be used until the new time listed in the "Valid Until" column in the main window. </p>
+<p></p>
+<table>
+<tr>
+<th id="th2">How to...</th> <th id="th2">Learn about...</th></tr>
+<tr>
+<td >
+<ul id="helpul">
+<li><a href=#renew-once> Renew ticket once</a></li>
+<li><a href=#renew-automatically> Renew tickets automatically</a></li>
 </ul>
+</td>
+<td>
+<ul id="helpul">
+<li><a href=#conditions> What's necessary to renew tickets</a></li>
+<li><a href=#related-help> Related help</a></li>
+</ul>
+</td>
+</tr>
+</table>
+
+
 
 <a name="renew-once"><p></p></a>
 <H2>Renew ticket once</H2>
+
+<ol>
+<li>If you have more than one <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principal</a>, click to select all principals with tickets you want to renew. </li>
+<li>Click the Renew Ticket button in the main window or use the <a href="JavaScript:popup.TextPopup(popupKeyboardShortcut, popfont,9,9,-1,-1)">keyboard shortcut</a>  [Ctrl + r].</li>
+</ol>
 <p>
-Click the Renew Ticket button in the Home tab. Your  renewable ticket(s) will be renewed with the same lifespan as the original ticket(s). The ticket can now be used until the new time listed in the "Valid Until" column.
-</p>
+ All renewable tickets are renewed for the selected principal(s).</p>
+<p>
+<a href=#top>Back to Top</a> </p>
+
 
 <a name="renew-automatically"><p></p></a>
 <H2>Renew ticket automatically</H2>
+<ol>
+<li>Find the Options panel. If no options are visible, click the Options button.</li>
+<li>Select <b>Automatic Ticket Renewal</b> if it is not already checked.</li>
+</ol>
 <p>
-Select <b>Automatic Ticket Renewal</b> in the Options section of the Home tab. If no options are visible, click the Options button to see and select them. <br>
-<b>Note: </b> If Automatic Ticket Renewal is already checked, selecting it will uncheck it and turn it off. </p>
+Your tickets flagged as renewable will automatically reset themselves before they expire, until the renewable lifetime of the tickets is reached. </p>
 <p>
-Your Kerberos tickets will now automatically be renewed until the renewable lifetime of the tickets is reached. However, this feature only works while Leash is active and running. This means that if your machine is in hibernation mode or if Leash is not running when it is time to renew your tickets, your tickets will not be renewed. </p>
+<b>Note: </b>This feature only works while Kerberos for Windows is active and running. This means that if your machine is in hibernation mode or if Kerberos is not running when it is time to renew your tickets, your tickets will not be renewed and will expire instead. </p>
 <p>
-
+<a href=#top>Back to Top</a> </p>
+<a name="conditions"><p></p></a>
+<H2>What's necessary to renew tickets</H2>
+<p>
+You can renew a ticket if the following conditions are met:</p>
+<ul>
+<li> When you obtained the ticket, the Renewable flag was selected. <a href="HTML/Ticket_Settings.htm">Ticket Settings and Flags help</a></li>
+<li> The "Renewable Until" deadline has not been reached. Show or hide the Renewable Until column with the View panel. <a href="View_Menu.htm">Using the View Panel</a></li>
+<li> The ticket has not already expired. </li>
+<li>Kerberos for Windows is running and your computer is not in hibernation mode.</li>
+</ul>
+<p>
+<a href=#top>Back to Top</a> </p>
 <a name="renewable-until"><p></p></a>
 <H2>Find  how long a ticket can be renewed</H2>
 <p>
-In the View section of the Home tab, click the Renewable Until checkbox. The Renewable Until column will appear. You can renew your ticket repeatedly until the date and time in this column is reached.
+In the View panel of the ribbon menu, select the Renewable Until checkbox.</p>
+<p>
+ The Renewable Until column will appear. You can renew your ticket repeatedly until the date and time in this column is reached. 
 </p>
-
-<b>Related help</b>
+<p>
+<a href=#top>Back to Top</a> </p>
+<a name="related-help"><p></p></a>
+<H2>Related help</H2>
 <ul>
+<li><a href="HTML/Tickets.htm#renewable">About renewable  tickets</a></li>
 <li><a href="HTML/Ticket_Settings.htm">Ticket settings and flags</a></li>
 <li><a href="HTML/Get_Tickets.htm">Get  tickets</a></li>
 </ul>
+<p>
+<a href=#top>Back to Top</a> </p>
+<SCRIPT Language=JavaScript> 
+popfont="Arial,.725," 
+popupPrincipal="Your principal is your Kerberos identity. It is your user name combined with the Kerberos realm you are using. For example: 'jdoe@SALES.WIDGET.COM' " 
+popupKeyboardShortcut="To use a keyboard shortcut, hold down the [Ctrl] key on your computer keyboard and press the appropriate letter.  " 
+</SCRIPT> 
+
+<OBJECT id=popup type="application/x-oleobject" 
+classid="clsid:adb880a6-d8ff-11cf-9377-00aa003b7a11"> 
+</OBJECT> 
 </BODY>
 </HTML>
