--- a/src/windows/leash/htmlhelp/html/Command_Line.htm
+++ b/src/windows/leash/htmlhelp/html/Command_Line.htm
@@ -9,18 +9,19 @@
 <H1>Kerberos with Command Prompt </H1>
 <p>
 Kerberos for Windows can be run from the Command Prompt in Windows. The following commands are available. Click a command name to see the relevant UNIX man page.</p>
-<ul>
-<li> <a href="HTML/KINIT.htm">KINIT</a>: Log in to Kerberos and obtain tickets. </li>
-<li> <a href="HTML/KLIST.htm">KLIST</a>:  List all of your valid tickets. </li>
-<li> <a href="HTML/KDESTROY.htm">KDESTROY</a>:  Destroy all of your tickets. </li>
-<li> <a href="HTML/MS2MIT.htm">MS2MIT</a>:  Import Kerberos tickets from your Windows Logon Session, if available.</li>
 
-<li>  </li>
-<li>  </li>
-<li>  </li>
-<li>  </li>
+<table class="noborder" >
+<tr><td> <a href="HTML/KINIT.htm">KINIT</a></td><td> Log in to Kerberos and obtain tickets. </td></tr>
+<tr><td>  <a href="HTML/KLIST.htm">KLIST</a></td><td>  List all of your valid tickets. </td></tr>
+<tr><td>  <a href="HTML/KDESTROY.htm">KDESTROY</a>&nbsp;</td><td>  Destroy all of your tickets. </td></tr>
+<tr><td>  <a href="HTML/MS2MIT.htm">MS2MIT</a></td><td>  Import Kerberos tickets from your Windows Logon session, if available.</td></tr>
+<tr><td>   <a href="HTML/KPASSWD.htm"> KPASSWD</a></td><td>  Change password. </td></tr>
+<tr><td> <a href="HTML/KSWITCH.htm">KSWITCH</a></td><td> Specify primary (default) cache.    </td></tr>
+<tr><td> <a href="HTML/KVNO.htm">KVNO</a></td><td> Acquire a service ticket for the specified principal(s) and show the key version numbers.    </td></tr>
+<tr><td> <a href="HTML/KCPYTKT.htm">KCPYTKT</a></td><td> Copy the specified service tickets to the destination credentials cache.    </td></tr>
 
 
-</ul>
+</table>
+
 </BODY>
 </HTML>
