--- a/src/windows/leash/htmlhelp/html/Encryption_Types.htm
+++ b/src/windows/leash/htmlhelp/html/Encryption_Types.htm
@@ -8,13 +8,51 @@
 <BODY>
 <H1>Encryption Types</H1>
 <p>
-Kerberos supports several types of encryption for the session key and the ticket. The type used for a particular ticket or session key depends on a combination of your operating system,  the configuration of your Kerberos installation, and the configuration and capabilities of the particular network resources you are accessing. 
-</p>
+Kerberos supports several types of encryption for securing session keys and the tickets. The type used for a particular  ticket or session key is automatically negotiated when you request a ticket or a service. </p>
+<ul >
+<li>When encrypting  tickets, the Key Distribution Center server (KDC) for your Kerberos installation checks for an encryption type that is shared by both the KDC and the service you are attempting to use.</li>
+<li> When encrypting  session keys, the KDC server checks for an encryption type shared by the KDC, the service, and the client requesting the session (you).   </li>
+</ul>
+<p></p>
+<table>
+<tr>
+<th id="th2">How to...</th> <th id="th2">Learn about...</th></tr>
+<tr>
+<td>
+<ul id="helpul">
+<li><a href=#view> View encryption types</a></li>
+</ul>
+</td>
+<td >
+<ul id="helpul">
+<li><a href=#weak> Weak encryption types</a></li>
+<li><a href=#supported> Supported encryption types</a></li>
+<li><a href=#related-help> Related help</a></li>
+</ul>
+</td>
+</tr>
+</table>
+
+<p></p>
+<H2><a name="weak"> Weak Encryption Types </a></H2>
 <p>
-Some encryption types that are still supported are now considered weak and therefore undesirable. However, they are still supported to allow Kerberos to be used in a network that contains some older machines running operating systems that  do not support the newer encryption types.</p>
-<H2>View Encryption Types</H2>
-In the View section of the menu, select Encryption Type to open that column. The column will show the encryption type associated with each of your tickets and session keys.
-<a name="supported-types"><p></p></a>
+In the table of Encryption Types below, some encryption types are noted as <b>weak</b>.  Most of them are encryption types that used to be strong but now, with more computing power available, are considered weak and therefore undesirable. However, they are still sometimes used for backwards compatability. If Kerberos is installed in a network that contains some older machines running operating systems that  do not support the newer encryption types, administrators can choose to allow the weaker encryption when connecting to the older machines.</p>
+<p>
+<a href=#top>Back to Top</a> </p>
+<H2><a name="view">View Encryption Types</a></H2>
+<ol>
+<li>In the View panel, select the Encryption Type checkbox. This opens the Encryption Type column in the main window, showing the encryption type associated with each of your tickets and session keys. <br>
+<a href="HTML/View_menu.htm">Using the View Panel</a></li>
+<li>Click and drag the line to the right of the Encryption Type column header to widen the column enough to see both the ticket and session key.</li>
+<li> Click the blue triangle to the left of a principal name to see all tickets and session keys issued to that principal.  Each ticket and key will have an entry in the Encryption type column. <br>
+<a href="HTML/View_Tickets.htm">View tickets help</a>
+</ol>
+
+
+<p>
+<a href=#top>Back to Top</a> </p>
+
+<a name="supported"><p></p></a>
 <H2>Supported Encryption Types </H2>
 <table>
 <tr>
@@ -53,7 +91,7 @@ In the View section of the menu, select Encryption Type to open that column. The
 </tr>
 <tr>
 <th id="th2"> rc4 or <br> arcfour</th>
-<td>The RC4 (Rivest Cipher) is a symmetric stream cipher that can use multiple key sizes. The exportable variations are considered weak, but the others are strong.
+<td>The RC4 (Rivest Cipher) is a symmetric stream cipher that can use multiple key sizes. The exportable variations are considered weak, but other variations are strong.
 <ul id="helpul">
 <li> arcfour-hmac </li> 
 <li> rc4-hmac </li> 
@@ -64,8 +102,24 @@ In the View section of the menu, select Encryption Type to open that column. The
 </ul>
 </td>
 </tr>
-
-   
 </table>
+<p>
+<a href=#top>Back to Top</a> </p>
+<H2><a name="related-help">Related Help</a></H2>
+<ul id="helpul">
+<li><a href="HTML/View_Tickets.htm">View tickets</a></li>
+
+</ul>
+
+
+<SCRIPT Language=JavaScript> 
+popfont="Arial,.825," 
+popupRealm=" Kerberos realms  are a way of logically grouping resources and identities that use Kerberos. Your realm is the home of your Kerberos identity and your point of entry to the network resources controlled by Kerberos." 
+</SCRIPT> 
+
+<OBJECT id=popup type="application/x-oleobject" 
+classid="clsid:adb880a6-d8ff-11cf-9377-00aa003b7a11"> 
+</OBJECT> 
+
 </BODY>
 </HTML>
