--- a/src/windows/leash/htmlhelp/html/FAQ.htm
+++ b/src/windows/leash/htmlhelp/html/FAQ.htm
@@ -6,18 +6,85 @@
 <Title>FAQ</Title>
 </HEAD>
 <BODY>
-<H1>Frequently Asked Questions (FAQ)</H1>
+<H1><a name="top">Frequently Asked Questions (FAQ)</a></H1>
 <ul id="helpul">
 
-<li>  </li>
-<li>  Will I be warned when my tickets are about to expire? </li>
-<li>  Are my tickets destroyed automatically when I exit Leash? </li>
-<li> Why should I use renewable tickets? </li>
-<li>  If I set my tickets to renew automatically, will the renewals keep happening if I close Leash? </li>
-<li>Can I use Leash with the command line prompt?  </li>
-<li>Where can I set Leash and Kerberos properties?  </li>
-<li>Why are some of my tickets flagged as proxiable when I have not chosen that flag?</li>
+<li> <a href="#get-tickets">How do I get tickets? </a> </li>
+<li> <a href="#expiration-warning"> Will I be warned when my tickets are about to expire? </a> </li>
+<li>  <a href="#automatic-destroy"> Are my tickets destroyed automatically when I exit Kerberos for Windows? </a> </li>
+<li> <a href="#renewable">Why should I use renewable tickets?</a> </li>
+<li> <a href="#renewable-closed"> If I set my tickets to renew automatically, will the renewals keep happening if I close Kerberos for Window?</a> </li>
+<li> <a href="#forwardable">How to I forward my forwardable tickets?</a></li>
+<li> <a href="#RSA-SecurID">How do I use my RSA SecurID token with Kerberos?</a></li>
+
+<li><a href="#Command-line">Can I use Kerberos with the command line prompt? </a> </li>
+<li><a href="#properties">Where can I set Kerberos properties?  </a></li>
+<li><a href="#proxiable-flag">Why are some of my tickets flagged as proxiable when I have not chosen that flag?</a></li>
 </ul>
+
+<H3> <a name="get-tickets">How do I get tickets?</a> </H3>
+
+<p>Click the Get Ticket  button and enter your principal (your Kerberos identity) and password to obtain a ticket.  <a href="HTML/Get_Tickets.htm">Click for details.</a>
+ If you have logged on to a Windows domain through a Windows Logon session, you already have a Keberos ticket. This ticket is marked in the main window with an Import Status of "imported," "importable," or "protected."
+<br>
+<a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
+</p>
+<p>
+<a href="#top">Back to top</a></p>
+
+<H3> <a name="expiration-warning">Will I be warned when my tickets are about to expire?</a> </H3>
+<p>Yes. A pop up window warns you 15, 10, and 5 minutes before your ticket expires. If you would also like an audible alarm at these intervals, select Expiration Alarm in the Option panel. <a href="HTML/Options_Menu.htm">Options Menu help</a> </p>
+<p>
+<a href="#top">Back to top</a></p>
+
+<H3><a name="automatic-destroy">Are my tickets destroyed automatically when I exit Kerberos for Windows?</a></H3>
+<p>
+No, not unless Destroy Tickets on Exit is selected in the Options panel. <a href="HTML/Options_Menu.htm">Options Menu help</a> </p>
+<p>
+<a href="#top">Back to top</a></p>
+
+<H3><a name="renewable">Why should I use renewable tickets?</a> </H3>
+<p>
+Renewable tickets add convenience, especially if you turn on the option to automatically renew them. They allow you to run a  batch job without interruption and to work through a long session without continually reentering your password.  <a href="HTML/Tickets.htm#renewable">About renewable tickets</a> </p>
+<p>
+<a href="#top">Back to top</a></p>
+ 
+<H3><a name="renewable-closed"> If I set my tickets to renew automatically, will the renewals keep happening if I exit Kerberos for Windows?</a> </H3>
+<p>
+No. Kerberos for Windows can only renew your tickets if the program is running and active. It cannot  renew your tickets if you exit the program or if your computer is turned off or in hibernation mode.</p>
+<p>
+<a href="#top">Back to top</a></p>
+
+<H3> <a name="forwardable">How to I forward my forwardable tickets?</a></H3>
+<p>That depends. Often they are forwarded automatically as needed. Ask your help desk or administrator for information specific to your installation.</p>
+<p>
+<a href="#top">Back to top</a></p>
+
+<H3><a name="RSA-SecurID">How do I use my RSA SecurID token with Kerberos?</a></H3>
+<p>
+If your company uses RSA SecurID to control access to Kerberos, you will be prompted to enter your SecurID password after you request a ticket. <a href="HTML/Get_Tickets.htm">Get Ticket help</a> </p>
+<p>
+<a href="#top">Back to top</a></p>
+
+
+<H3><a name="Command-line">Can I use Kerberos with the command line prompt? </a> </H3>
+<p>
+Yes. Click <a href="HTML/Command_Line.htm">here</a> for a list of available commands. </p>
+<p>
+<a href="#top">Back to top</a></p>
+
+
+<H3><a name="properties">Where can I set Kerberos properties?  </a> </H3>
+<p>
+You cannot use the Kerberos for Windows program to set preferences such as default ticket lifetimes. Instead, edit the appropriate configuration file. For more information, visit the <a href="http://web.mit.edu/kerberos/krb5-current/doc/krb_admins/conf_files/index.html"> MIT Kerberos documentation site. </a>
+
+ </p>
+<p>
+<a href="#top">Back to top</a></p>
+
+
+<H3><a name="proxiable-flag">Why are some of my tickets flagged as proxiable when I have not chosen that flag?</a></H3>
+
 
 </BODY>
 </HTML>
