--- a/src/windows/leash/htmlhelp/html/Getting_Started.htm
+++ b/src/windows/leash/htmlhelp/html/Getting_Started.htm
@@ -7,8 +7,108 @@
 <Title>Getting Started</Title>
 </HEAD>
 <BODY>
-<H1>Getting Started</H1>
-Get tickets and get to work.
+<H1><a name="top">Getting Started</a></H1>
+<H2>Get tickets and get to work! </H2>
+
+<p>
+ Kerberos for Windows provides an easy way to manage your Kerberos tickets. Jump to one of the following starting places, scroll down to browse, or use the table of contents to the left of this page to pick a topic.
+<ul >
+<li> Unfamliar with Kerberos tickets?  <a href="#unfamiliar">Click here</a></li>
+<li> Familiar with Kerberos tickets but new to Kerberos for Windows? <a href="#familiar">Click here. </a></li>
+<li> Just want a quick introduction to getting tickets?<a href="#get-tickets"> Click here</a></li>
+<li> Just want a quick introduction to exporting tickets?<a href="#export-tickets"> Click here</a></li>
+<li> Want help using this help system? <a href="#help-system"> Click here</a></li>
+</ul>
+</p>
+<H3><a name="unfamiliar">Unfamliar with Kerberos?</a></H3>
+<p>
+Keberos is a network authentication protocol that uses the concept of  short term "tickets" to allow users to securely access services over a physically insecure network. Kerberos, or Kerberos for Windows, is also the name of this application. Kerberos for Windows provides an easy interface for managing Kerberos tickets.</p>
+
+<p>Click an introductory topic below to jump to the topic page. Click the back button or "Getting Started" in the table of contents to the left to return to this page.</p>
+<table>
+<tr><th id="th2">Topic</th><th id="th2">Description</th></tr>
+<tr>
+<td><a href="HTML/Kerberos.htm">What is Kerberos?</a></td>
+<td> Introduction to Kerberos and what it offers.</td></tr>
+<tr>
+<td><a href="HTML/Kerberos_Terminology.htm">Kerberos Terminology</a></td>
+<td>Explanation of principals, realms, and tickets. Provides an overview of how Kerberos works.  </td></tr>
+<tr>
+<td><a href="HTML/Tickets.htm">About Tickets</a></td>
+<td> Learn about tickets, ticket expiration, renewable tickets, and importable tickets.</td></tr>
+</table>
+<p>
+<a href=#top>Back to Top</a> </p>
+<p>
+<H3><a name="familiar">Familiar with Kerberos tickets but new to Kerberos for Windows?</a></H3>
+<p>
+Kerberos for Windows is an easy to use interface for managing your Kerberos tickets. The main window shows all of your tickets. All available commands and options are in the ribbon menu at the top of the window.</p>
+<p>
+Browse the table below to see where to find the commands and options you need.
+</p>
+<table>
+<tr><th colspan="2">How to...</th>
+<tr><th id="th2"> Get new tickets</th> <td>Click the Get Ticket button. <br>
+ <a href="HTML/Get_Tickets.htm">Click for details</a> </td></tr>
+<tr><th id="th2">Import Windows domain tickets after you've started a Windows Logon session</th> <td>In most installations, Keberos automatically imports existing tickets when possible. Look in the main window for the Import Status column. 
+<ul id="tableul">
+<li>If the Import Status column is hidden, you do not have a Windows domain ticket. </li>
+<li> If a ticket is marked as <em>imported</em>, it has been automatically imported. </li>
+<li> If the ticket is marked as <em>importable</em>, select Automatic Import in the Options panel or click Import in the More panel. </li>
+<li>If the ticket is marked as <em>protected</em>, your computer's User Access Control (UAC) feature is preventing Kerberos from importing the ticket. </li>
+</ul>
+<a href="HTML/Import_Tickets.htm">Click for details</a> </td></tr>
+<tr><th id="th2"> Export tickets to allow a computer that is not part of a Windows domain (or other realm) to access the realm</th> <td>Click the Export Tickets button.  <br>
+<a href="HTML/Export_Tickets.htm">Click for details</a> </td></tr>
+<tr><th id="th2">  Change your password</th> <td>Click the Change Password button. <br>
+ <a href="HTML/Change_Password.htm">Click for details</a> </td></tr>
+<tr><th id="th2">Change what ticket information is displayed </th> <td>Select or deselect checkboxes in the View panel. <br>
+ <a href="HTML/View_Menu.htm">Click for details</a> </td></tr>
+<tr><th id="th2">Set Kerberos's automatic functions (auto renew, auto destroy, audible ticket expiration alarm).</th> <td>Select or deselect checkboxes in the Options panel.  <br>
+<a href="HTML/Options_Menu.htm">Click for details</a> </td></tr>
+<tr><th id="th2">Renew your tickets</th> <td>Click the Renew Tickets button or turn on Automatic Ticket Renewal in the Options panel.  <br>
+<a href="HTML/Renew_Tickets.htm">Click for details</a> </td></tr>
+<tr><th id="th2"> Destroy your Kerberos for Windows tickets </th> <td>Click the Destroy Tickets button. <br>
+ <a href="HTML/Destroy_Tickets.htm">Click for details</a> </td></tr>
+<tr><th id="th2">Manage multiple principals </th> <td>
+When you get tickets for a principal, Kerberos offers to remember the principal for you. You can then select saved principals from a list when getting tickets or changing your password. 
+ 
+<p></p>
+In the main window, click a principal to select it. The Renew Ticket, Change Password, and Make Default buttons then apply to the selected principal.<br>
+<br> <a href="HTML/Manage_Multiple_Principals.htm">Click for details</a>
+ </td></tr>
+<tr><th id="th2">Change Kerberos properties</th> <td>Most properties are set by modifying the appropriate configuration file. You can allow realm names that use lower case letters by selecting Allow Mixed Case Realm in the More panel. <br>
+<a href="HTML/More_Menu.htm">Click for details</a> </td></tr>
+</table>
+<p>
+<a href=#top>Back to Top</a> </p>
+
+
+<H2><a name="get-tickets"> Introduction to Getting Tickets</a></H2>
+<p>
+Click the Get Ticket  button and enter your principal (your Kerberos identity) and password to obtain a ticket. The ticket allows you to securely access all of the computers and services set up to authenticate you through Kerberos, until the ticket expires, without requiring you to enter your password again. <br>
+<a href="HTML/Get_Tickets.htm">How to get tickets</a>
+ </p>
+<p>
+ If you have logged on to a Windows domain through a Windows Logon session, you already have a Keberos ticket. This ticket is marked in the main window with an Import Status of "imported," "importable," or "protected."
+<br>
+<a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
+</p>
+<p>
+<a href=#top>Back to Top</a> </p>
+<H2><a name="export-tickets">Introduction to Exporting Tickets</a></H2>
+<p>
+Once you have obtained tickets with the Get Ticket window, you can click the Export button to export your tickets into your Windows Logon session. The tickets can then be used in your Windows domain. This is useful when you want to you use a computer that is not part of a Windows domain to access that domain. </p>
+<p>
+<a href=#top>Back to Top</a> </p>
+
+<H2><a name="help-system">Using This Help System</a></H2>
+<p>
+Use the table of contents to the left to explore the available help. Or, if you are looking for information about a particular subject, click the Index or Search tab. </p>
+<p>
+The help pages contain many links to other pages in the help system. If you click a link, you can return to the page you started on with the Back button or by finding your spot in the table of contents. </p>
+<p>
+<a href=#top>Back to Top</a> </p>
 
 </BODY>
 </HTML>
