--- a/src/windows/leash/htmlhelp/html/Report_Bugs.htm
+++ b/src/windows/leash/htmlhelp/html/Report_Bugs.htm
@@ -6,12 +6,16 @@
 <Title>Report_Bugs</Title>
 </HEAD>
 <BODY>
-<H1>Reporting Bugs and Requesting Assistance</h1>
-<p> We strive to provide a robust product. If you find bugs in Leash or Keberos, we want to know about them. Please email bug reports to kfw-bugs@MIT.EDU. Provide as much detail as you can so that we can replicate the issue. </p>
+<H1>Report Bugs or Request Assistance</h1>
+<H2>Bug Reports</H2>
+<p> We strive to provide a robust product. If you find bugs in Keberos for Windows, we want to know about them. Please email bug reports to <span class="typed">  kfw-bugs@MIT.EDU</span>. Please provide as much detail as you can so that we can replicate the issue. </p>
+
+<H2>Requesting Assistance/Joining Discussion</H2>
 <p>
-There is a Usenet newsgroup dedicated to discussing Kerberos issues: <tt>  comp.protocols.kerberos</tt>. The mailing list <tt>kerberos@MIT.EDU  </tt> is gatewayed to the newsgroup. </p>
+The Usenet newsgroup <span class="typed">  comp.protocols.kerberos</span> is dedicated to discussing Kerberos issues. The mailing list <span class="typed"> kerberos@MIT.EDU  </span> is gatewayed to the newsgroup.</p>
 <p>
-To subscribe to the mailing list, email a request to <tt> kerberos-request@MIT.EDU</tt> or submit the subscribtion form on the web page <http://mailman.mit.edu/mailman/listinfo/kerberos>
+To subscribe to the mailing list, email a request to <span class="typed">  kerberos-request@MIT.EDU</span> or submit the <a href=
+http://mailman.mit.edu/mailman/listinfo/kerberos target="new">online subscription form</a> 
 </p>
 
 
